src/App.css
:root {
  --davys-grey: rgb(87, 86, 83);
  --nickel: rgb(117, 117, 108);
  --blacc: rgba(0, 0, 0);
  --darkgray: rgb(17, 19, 20);
  --offwhite: rgb(216, 208, 207);
  --dimgray: rgb(108, 108, 108);
}
body{
  background-color: var(--darkgray);
  color: var(--offwhite);
}

.article{
  margin: 0;
  padding-left: 10px;
  padding-right: 10px;
  position: absolute;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border: 0.125em solid var(--offwhite);
  overflow-y: scroll;
  animation: fadeInArt 0.25s ease-in;
}

.article.hide {
  color: var(--darkgray);
  animation: fadeOutArt 0.25s ease-out;
}

#topArticle{
  top: 25%;
  left: 50%;
  width: 90%;
  height: 25%;
  border: 0.125em solid #5F85DB;
}

#botArticle{
    top: 85%;
    left: 50%;
    width: 90%;
    height: 25%;
    border: 0.125em solid #A21232
}

@keyframes fadeInArt {
  0% {
    color: var(--darkgray);
  }
  100% {
    color: var(--offwhite);
  }
}

@keyframes fadeOutArt {
  0% {
    color: var(--offwhite);
  }
  100% {
    color: var(--darkgray);
  }
}

#header {
  width:100%;
  height: 50px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  background-color:  var(--darkgray);
  color:  var(--offwhite);
  border-bottom: 2px solid var(--offwhite);
  position: absolute;
  
}

#winsCount{
  width: 70px;
  padding: 10px;
  color: rgb(255, 230, 0);
}

#livesCount{
  width: 70px;
  padding: 10px;
  letter-spacing: 20px;
  transform: translate(0%,5%);
  color: #A21232;
}

#endGameScreen{
  position: absolute;
  width: 340px;
  height: 340px;
  background: var(--darkgray);
  border: 2px solid var(--offwhite);
  top: 55%;
  left: 50%;
  opacity: 100%;
  transform: translate(-50%, -50%);
}

#endGameScreen.hide {
  opacity: 0%;
  transition: opacity 0.25s;
}

.articleLink{
  color: var(--offwhite);
  position: absolute;
  transform: translate(-50%,-50%);
  left:50%;
  opacity: 100%;
  transition: opacity 0.25s;
}

.articleLink.hide{
  opacity: 0%;
  transition: opacity 0.25s;
}

#link1{
  top: 40%;
}

#link2{
  top: 70%;
}

  #container {
    width: 100vh;
    height: 100vh;
    max-width: 375px;
    max-height: 812px;
    position: relative;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, 0%);
    transform: translate(-50%, 0%);
  }

.fancybutton {
  appearance: none;
  background-color: var(--darkgray);
  border: 0.125em solid var(--offwhite);
  border-radius: 0.9375em;
  box-sizing: border-box;
  cursor: pointer;
  color: var(--offwhite);
  display: inline-block;
  font-size: 16px;
  font-weight: 600;
  line-height: normal;
  margin: 0;
  min-height: 3.75em;
  min-width: 0;
  outline: none;
  padding: 1em 2.3em;
  text-align: center;
  text-decoration: none;
  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  will-change: transform;
  transition: opacity 0.25s;
  opacity: 100%;
}

.fancybutton.hide {
  opacity: 0%;
  color: var(--darkgray);
  transition: opacity 0.25s;
}

.labels{
  opacity: 100%;
  transition: opacity 0.25s;
}

.labels.hide{
  opacity: 0%;
  transition: opacity 0.25s;
}

.fancybutton:disabled {
  pointer-events: none;
 }
 
 .fancybutton:hover {
  color: var(--darkgray);;
  background-color: var(--offwhite);
  transform: translateY(-2px);
 }
 
 .fancybutton:active {
  transform: translateY(0);
 }

#getButton {
    position: absolute;
    top: 55%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
   }

  #botViewsButton{
    position: absolute;
      top: 65%;
      left: 15%;
      -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
  }

  #botSizeButton{
    position: absolute;
      top: 65%;
      left: 85%;
      -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
  }

  #topViewsButton{
    position: absolute;
      top: 45%;
      left: 15%;
      -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
  }

  #topSizeButton{
    position: absolute;
      top: 45%;
      left: 85%;
      -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
  }

  .btnLabels{
    line-height: 0%;
  }

  #viewsLabel{
    position: absolute;
      top: 55%;
      left: 85%;
      -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
  }

  #sizeLabel{
    position: absolute;
    top: 55%;
    left: 15%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }

  #chart1{
    height: 50%;
    width: 50%;
    position: absolute;
    top: 55%;
    left: 25%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }

  #chart2{
    height: 50%;
    width: 50%;
    position: absolute;
    top: 55%;
    left: 75%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }

  .topPageCounts{
    color: #5F85DB;
    position: absolute;
    top: 51%;
    left: 25%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }

  .botPageCounts{
    color: #A21232;
    position: absolute;
    top: 59%;
    left: 25%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }
  
  .topPageCountv{
    color: #5F85DB;
    position: absolute;
    top: 51%;
    left: 75%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }

  .botPageCountv{
    color: #A21232;
    position: absolute;
    top: 59%;
    left: 75%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }

  #countLabels{
    color: var(--offwhite);
    position: absolute;
    top: 55%;
    left: 25%;
    transform: translate(-50%, -120%);
  }

  #countLabelv{
    color: var(--offwhite);
    position: absolute;
    top: 55%;
    left: 75%;
    transform: translate(-50%, -120%);
  }

  .loader,
.loader:before,
.loader:after {
  border-radius: 50%;
}
.loader {
  color: var(--offwhite);
  font-size: 11px;
  text-indent: -99999em;
  margin: 55px auto;
  position: relative;
  width: 10em;
  height: 10em;
  box-shadow: inset 0 0 0 1em;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  opacity: 100%;
  transition: opacity 0.25s;
}

.loader.hide{
  opacity: 0%;
  transition: opacity 0.25s;
}
.loader:before,
.loader:after {
  position: absolute;
  content: '';
}
.loader:before {
  width: 5.2em;
  height: 10.2em;
  background: var(--darkgray);
  border-radius: 10.2em 0 0 10.2em;
  top: -0.1em;
  left: -0.1em;
  -webkit-transform-origin: 5.1em 5.1em;
  transform-origin: 5.1em 5.1em;
  -webkit-animation: load2 2s infinite ease 1.5s;
  animation: load2 2s infinite ease 1.5s;
}
.loader:after {
  width: 5.2em;
  height: 10.2em;
  background: var(--darkgray);
  border-radius: 0 10.2em 10.2em 0;
  top: -0.1em;
  left: 4.9em;
  -webkit-transform-origin: 0.1em 5.1em;
  transform-origin: 0.1em 5.1em;
  -webkit-animation: load2 2s infinite ease;
  animation: load2 2s infinite ease;
}
@-webkit-keyframes load2 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load2 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

#loadIcon1{
  position: absolute;
  transform: translate(-50%,-100%);
  top: 25%;
  left: 50%;
}

#loadIcon2{
  position: absolute;
  transform: translate(-50%,-100%);
  top: 85%;
  left: 50%;
}

.aboutButton{
  appearance: none;
  background-color: var(--darkgray);
  border: 0.125em solid var(--offwhite);
  border-radius: 0.9375em;
  box-sizing: border-box;
  cursor: pointer;
  color: var(--offwhite);
  display: inline-block;
  font-size: 16px;
  font-weight: 600;
  line-height: normal;
  margin: 0;
  outline: none;
  text-align: center;
  text-decoration: none;
  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  will-change: transform;
  transition: opacity 0.25s;
  opacity: 100%;
  z-index: 3; 
}

.aboutButton:hover {
  color: var(--darkgray);;
  background-color: var(--offwhite);
  transform: translateY(-2px);
 }

 .aboutButton:active {
  transform: translateY(0);
 }

#aboutOverlay {
  position: fixed; 
  display: block;
  width: 100%; 
  height: 100%; 
  top: 52px;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(17, 19, 20, 0.95); 
  z-index: 2; 
  opacity: 100%;
  transition: opacity 0.25s;
}

#aboutOverlay.hide {
  opacity: 0%;
  transition: opacity 0.25s;
  display: none;
}

.aboutInfo{
  position: fixed; 
  display: block;
  font-size: 32px;
  width:100vh;
  top: 52px;
  left: 50%;
  transform: translate(-50%,0%);
  max-width: 375px;
  opacity: 100%;
  transition: opacity 0.25s;
}

.aboutInfo.hide{
  opacity: 0%;
  transition: opacity 0.25s;
  display: none;
}

.aboutLink{
  color: var(--offwhite);
}

